# shappie

./: .env  .gitignore  .replit  Dockerfile  LICENSE  README.md  bot.py  docker-compose.override.yml  docker-compose.yml  entrypoint.py  example.env  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
configs/: channel_access.json
containers/: API.Dockerfile  Dashboard.Dockerfile  Discord.Dockerfile
data/: fallacies.json
data/layers/: layer-2.md  layer-3.md  layer-5.md
data/seed/: GATO.constitutions.json  GATO.layer-info.json  GATO.messages.json  GATO.modes.json  GATO.personas.json  GATO.state.json
docs/: DEPLOYMENT.md
scripts/: GATO.personas.json  __init__.py  run_bot.py  seed_db.py
scripts/layers/: layer-6.md
shappie/: datastore.py  llm.py
src/: entrypoint.py
src/api/: __init__.py  main.py  storage.py
src/api/vectorstore/: __init__.py  chroma.py  embeddings.py  loaders.py  splitters.py
src/dashboard/: __init__.py  dashboard.py
src/layers/: layer-1.md  layer-4.md  layer-7.md
src/model/: __init__.py  _model.py  message.py  persona.py
src/shappie/: __init__.py  bot.py  datastore.py  interaction.py  llm.py  tool-schema.json  tool.py
src/shappie/arxiv/: result_response.json
src/shappie/bot/: __init__.py  bot.py  persona.py  shappie.py
src/shappie/tool_utils/arxiv/: __init__.py
src/shappie/tools/: __init__.py  llms.py  tool-schema.json  tool.py  vectorstore_retrievers.py  webscraper.py
