[tool.poetry]
name = "repl_nix_shappie"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.2.0"
openai = "^0.27.8"
discord = "^2.3.0"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
